--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -1059,7 +1059,7 @@ call-to-action .button {
 footer {
   padding-top: 48px;
   margin-bottom: 48px;
-  color: #303030;
+  color: #fff;
   font-size: 14px;
   text-align: center;
   position: relative;
